# Vla0-TRL

./: README.md  pyproject.toml
configs/: vla0.yaml
scripts/: eval.py  eval.sbatch  train.py  train.sbatch
src/rv_eval/: __init__.py  evaluator.py  libero_env.py
src/rv_train/: __init__.py  collator.py  dataset.py  model.py  utils.py
